--- a/index.html
+++ b/index.html
@@ -3,49 +3,32 @@
   <style>
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      /* margin: 0;
+      padding: 0; */
+    }
+    html {
+      height: 100%;
     }
     body {
-      background: url("../assets/bg.png") center/cover no-repeat;
-    }
-    .card-list {
-      display: flex;
-      flex-wrap: wrap;
-      grid-template-columns: repeat(3, 1fr);
-      justify-content: center;
       background-color: #53577e;
+      margin: 0;
+      color: white;
+      /* background: url("../assets/bg.png") center/cover no-repeat; */
     }
-    .card-list:hover .overview {
-      transform: translateY(0);
-    }
-    .movie-card {
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
-      margin: 20px;
-      padding: 20px;
-      width: 300px;
-      justify-self: center;
-      background-color: #9c9fb5;
-      border-radius: 10px;
-      cursor: pointer;
-      user-select: none;
-    }
-    .movie-card img {
-      width: 100%;
-      border-radius: 10px;
-    }
-
     header {
-      background-color: #373b69;
+      top: 0;
+      width: 100%;
+      background-color: rgba(55, 59, 105, 0.9);
       color: white;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 30px 0;
+      /* padding: 30px 0; */
+      position: fixed;
+      z-index: 1;
     }
-
     .search {
-      width: 70%;
+      width: 60%;
       display: flex;
       justify-content: flex-end;
       padding: 1rem; /*벽에서 떼줌*/
@@ -57,9 +40,9 @@
     }
     .search input {
       /* margin-left: 20px;
-      min-width: 200px; */
+          min-width: 200px; */
       background-color: transparent;
-      border: 2px solid #22254b;
+      /* border: 2px solid #22254b; */
       padding: 0.5rem 1rem;
       border-radius: 50px;
       font-size: 1rem;
@@ -81,8 +64,128 @@
       background-color: #373b69;
       color: white;
     }
-    h3 {
+    section {
+      display: flex;
+      /* 컨테이너 내에서 아이템들이 한 줄에 모두 들어갈 수 없는 경우에 줄바꿈된다. */
+      flex-wrap: wrap;
+      max-width: 100%;
+      height: auto;
+      margin-top: 10px;
+      padding-top: 150px;
+      z-index: 0;
+    }
+    /* 카드 가운데 정렬 */
+    .card-list {
+      justify-content: center;
+    }
+    /* .card-list {
+          display: flex;
+          flex-wrap: wrap;
+          grid-template-columns: repeat(3, 1fr);
+          justify-content: center;
+          background-color: #53577E;
+        } */
+    /* .card-list:hover .overview {
+          transform: translateY(0);
+        } */
+    .movie-card {
+      width: 300px;
+      margin: 16px;
+      background-color: #9c9fb5;
+      position: relative;
+      overflow: hidden;
+      border-radius: 10px;
+      /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
+          margin: 20px;
+          padding: 20px;
+          width: 300px;
+          justify-self: center;
+          background-color: #9C9FB5;
+          border-radius: 10px;
+          cursor: pointer;
+          user-select: none; */
+    }
+    /* 호버 효과 - 영화 카드 확대 및 그림자 변경 */
+    .movie-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2), 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+    img:hover {
+      cursor: pointer;
+    }
+    .movie-card img {
+      width: 100%;
+    }
+    /* .movie-card img {
+          width: 100%;
+          border-radius: 10px;
+        } */
+    .star {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 20px;
+      padding: 3px 6px;
+    }
+    .movie-info {
+      color: #eee;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 15px 15px;
+      /* 텍스트 간격 */
+      letter-spacing: 1px;
+    }
+    .overview {
+      background-color: rgba(83, 87, 126, 0.9);
+      padding: 32px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      max-height: 100%;
+      transform: translateY(101%);
+      transition: transform 0.3s ease;
+    }
+    /* .overview > p { */
+    /* 양쪽 정렬, 행이 균등하게 조정된다. */
+    /* text-align: justify; */
+    /* } */
+    .movie-card:hover .overview {
+      transform: translateY(0);
+    }
+    /* h3 {
+          margin-bottom: 10px;
+        } */
+
+    /* 하단 */
+    .footer {
+      /* footer를 aside위에 올리기 위해 사용(부유객체) */
+      position: absolute;
+      width: 100%;
+      line-height: 60px;
+      color: #8a8c8f;
+      margin-top: 30px;
+    }
+    .footer-img {
+      display: block;
+      margin: 0 auto;
+      width: 100px;
+      height: 100px;
       margin-bottom: 10px;
+      border-radius: 100px 100px 100px 100px;
+    }
+    .footer-img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2), 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+    .arrow {
+      float: right;
+      width: 70px;
+      height: 70px;
+      margin-bottom: 10px;
+      border-radius: 300px 300px 300px 300px;
     }
   </style>
   <head>
@@ -96,15 +199,30 @@
   </head>
   <body>
     <header>
-      <h1>Cinematic Masterpieces</h1>
+      <h1>🎬𝐶𝑖𝑛𝑒𝑚𝑎𝑡𝑖𝑐 𝑀𝑎𝑠𝑡𝑒𝑟𝑝𝑖𝑒𝑐𝑒𝑠🎬</h1>
       <form class="search" onsubmit="handleSearch(event)">
-        <!-- <label>영화 검색 : </label> -->
-        <input type="text" id="search-input" placeholder="search" />
+        <!-- <label>📽️</label> -->
+        <input type="text" id="search-input" autofocus placeholder="search" />
         <button type="submit" id="search-btn">OK</button>
       </form>
     </header>
-
     <section class="card-list" id="cards"></section>
     <script src="movie.js"></script>
+    <div class="footer">
+      <footer>
+        <a href="https://github.com/leesoojinn" target="_blank">
+          <img
+            class="footer-img"
+            src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="arrow"
+            src="https://cdn-icons-png.flaticon.com/128/4196/4196777.png"
+          />
+        </a>
+      </footer>
+    </div>
   </body>
 </html>
